--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -1,11 +1,7 @@
 {% load i18n %}
 {% load ndf_tags %}
 {% block head %}
-    <script src="/static/ndf/bower_components/jquery-ui/jquery-ui.js"></script> <!-- checked -->
-      <script src="/static/ndf/bower_components/jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.min.js"></script> <!-- checked -->
-      <script src="/static/ndf/bower_components/jqueryui-timepicker-addon/dist/jquery-ui-sliderAccess.js"></script> <!-- checked -->
-      <link rel="stylesheet" href="/static/ndf/bower_components/jqueryui-timepicker-addon/dist/jquery-ui-timepicker-addon.css"> <!-- checked -->
-      <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/jquery-ui/themes/smoothness/jquery-ui.css"> <!-- checked -->
+    
     <style type="text/css">
     .right-btn, .left-btn{
         /*float: left;*/
@@ -113,6 +109,7 @@
             
                 <li><a href="{% url 'edit_course_page' group_id activity_node.pk %}">Edit Activity</a></li>
                 <li><a title="Edit Content" class="edit_res_unit">{% trans " Edit Only Content" %}</a></li>
+                <li><a title="Edit Interaction Settings" class="edit-interaction">{% trans "Interaction Settings" %}</a></li>
                 <li><a href="{% url 'all_translations' group_id activity_node.pk %}">Alternate Language</a></li>
                 <li><a href="{% url 'course_pages' group_id %}" >Back to Activities</a></li>
 
