--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -11,13 +11,29 @@
 {% get_gstudio_social_share_resource as social_share %}
 {% if social_share %}
 <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/ckeditor.js"></script>
-    <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
+<script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
+
+<script type="text/javascript" src="/static/ndf/bower_components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async></script>
+<!-- MathJax-In-Line-Configuration: Specifying the configuration settings -->
+<!--
+Seems to be no need of following mathjax config's which was needed in older versions.
+Still keeping for future ref (if needed).
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [['$','$'], ['\\(','\\)']],
+      displayMath: [['\\[','\\]'], ['$$','$$']]
+    }
+  });
+</script>
+-->
+
 <script type="text/javascript">
-  $( document ).ready(function() { 
+  $( document ).ready(function() {
     var x = location.href;
     var hostname = location.host;
     x = "https://www.facebook.com/dialog/feed?app_id=146799965703412&redirect_uri=http://www.metastudio.org/home/&link="+location.href+"&caption=  {{node.name}}&picture=" + hostname + "{% url 'read_file' group_name_tag node download_filename %}";
-    $(".share_link").attr("href",x);  
+    $(".share_link").attr("href",x);
 });
 </script>
 {% endif %}
@@ -310,23 +326,23 @@
                             <a href="#panel1" style="background-color: #2980B9;color:#FFF;width:20%">Change Thumbnail</a>
                             <div id="panel1" class="content" style="height:210px">
                               {% get_relation_value node.pk 'has_thumbnail' as grel_dict %}
-                              {% include 'ndf/video_thumbnail.html' with grel_dict=grel_dict video_id=node.pk group_id=group_id parent_node=node.pk %}                
+                              {% include 'ndf/video_thumbnail.html' with grel_dict=grel_dict video_id=node.pk group_id=group_id parent_node=node.pk %}
                             </div>
-                      
+
                       </dd>
                   </dl>
 
 
                 <a  class="tiny button radius" data-reveal-id="add_transcript{{node.pk}}"> {% trans "Add Transcript" %}</a>
-                <div id="add_transcript{{node.pk}}" class="reveal-modal" data-reveal style="position:absolute;"> 
+                <div id="add_transcript{{node.pk}}" class="reveal-modal" data-reveal style="position:absolute;">
                   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
-                  <textarea>{{node_transcript}}</textarea> 
+                  <textarea>{{node_transcript}}</textarea>
                   <input onclick="add_transcript_func(this)" type="button" class="tiny button radius add-trans" data-src ="{{node}}"   value="{% trans 'Add' %}">
                   <input type="button" class="tiny button radius "  value="{% trans 'Cancel' %}">
                 </div>
 
                 <a  class="tiny button radius" data-reveal-id="add_subtitle{{node.pk}}"> {% trans "Add Subtitle(s)" %}</a>
-                <div id="add_subtitle{{node.pk}}" class="reveal-modal" data-reveal style="position:absolute;"> 
+                <div id="add_subtitle{{node.pk}}" class="reveal-modal" data-reveal style="position:absolute;">
                   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 
                 </div>
@@ -335,11 +351,11 @@
               {% elif 'audio' in node.if_file.mime_type %}
                 {% get_attribute_value node.pk 'has_transcript' as node_transcript %}
                 {% include 'ndf/widget_audio_player.html' with audio_obj=node %}
-                 
+
                  <a  class="tiny button radius mod-btn" data-reveal-id="add_transcript{{node.pk}}"> {% trans "Add Transcript" %}</a>
-                <div id="add_transcript{{node.pk}}" class="reveal-modal" data-reveal style="position:absolute;"> 
+                <div id="add_transcript{{node.pk}}" class="reveal-modal" data-reveal style="position:absolute;">
                   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
-                  <textarea>{{node_transcript}}</textarea> 
+                  <textarea>{{node_transcript}}</textarea>
                   <input onclick="add_transcript_func(this)" type="button" class="tiny button radius add-trans" data-src ="{{node}}"   value="{% trans 'Add' %}">
                   <input type="button" class="tiny button radius "  value="{% trans 'Cancel' %}">
                 </div>
@@ -538,8 +554,8 @@
                   Download
                 </a>
                 {% endif %}
-               
-                    
+
+
                 {% endif %}
 
           {%  else %}
@@ -552,14 +568,14 @@
                   Download
                 </a>
 
-               
+
               {% endif %}
 
           {% endif %}
               </div>
        {% endif %}
        <br>
-        
+
                   {% if social_share == True and "Group" not in node.member_of_names_list and "PartnerGroup" not in node.member_of_names_list %}
                          <div class="large-12 columns row">
                            <a class = "share_link" href="#" accesskey="l" target="_blank"  title="Share on Facebook">
@@ -601,9 +617,9 @@
           {% endif %}
 
           <div>
-            
+
             {% comment %}
-            
+
             {% if "Group" in node.member_of_names_list %}
             {% get_object_value node as objvalue %}
               <table style="width:60%; border-width:0px;" >
@@ -928,16 +944,16 @@
     $(".change-thumbnail-area").show();
 
   })
-  // iframe for html content  
+  // iframe for html content
   function adjustIframeHt(){
 
     var iframeBodyHt = $("iframe").contents().find("body").height();
     var docHeight = $(window).height();
     docHeight -= docHeight * 0.20;
     $("iframe").not('.twitter-share-button').height(docHeight + 50);
-    
+
     var changedHt;
-    
+
     setTimeout(function(){
 
       changedHt = $("iframe").contents().find("body").height();
@@ -954,21 +970,21 @@
 
     // making <a> disabled of images in html pages in iframe
     var imgInIframe = $("iframe#html-res-iframe").contents().find("img");
-    
+
     imgInIframe.each(function(){
-      
+
       var tempImgAnchor = $(this).parent("a");
 
       // additional check if parent is <a> and if it contains url pattern: "/gstudio/resources/images/show/"
       if(tempImgAnchor.is("a") && $(tempImgAnchor).attr("href").trim().contains("/gstudio/resources/images/show/"))
       {
         tempImgAnchor.attr("href", "");
-        tempImgAnchor.on("click", function(e){ e.preventDefault(); } ) 
+        tempImgAnchor.on("click", function(e){ e.preventDefault(); } )
       }
-    
+
     })
   });
-  
+
 
 </script>
 <script type="text/javascript">
@@ -994,7 +1010,7 @@ function add_transcript_func(this_obj){
                   }
 
             });
-    
+
     }
 
 </script>
