--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_interaction.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_interaction.html
@@ -1,39 +1,39 @@
 {% load i18n %}
 {% load ndf_tags %}
 
-    <form data-abide id="form-edit-node" method="POST"   action="{% url 'save_interactions' group_id %}" enctype="multipart/form-data">
-
-{% csrf_token %}
+  <form data-abide id="form-edit-node" method="POST"   action="{% url 'save_interactions' group_id %}" enctype="multipart/form-data">
+	{% get_attribute_value node.pk 'player_discussion_enable' as player_discussion_enable_attr %}
+  {% get_thread_node node.pk as thread_node %}
+  {% if thread_node %}
+      {% get_attribute_value thread_node 'release_response' as resp_val %}
+      {% get_attribute_value thread_node 'thread_interaction_type' as thr_int_type %}
+      {{thr_int_type}}
+  {% endif %}
+	{% csrf_token %}
 	<input type="hidden" name="node_id" class="form_node_id" value="{{node.pk}}">
 
-        <div class="content contents" id="panel-thread" style="width:95%;" >
+        <div class="content contents" id="panel-thread" >
         <div class="row">
-            <h7>{% trans "Add properties to the discussion feature of this " %}{{title}}{% trans " node "%} </h7>
+            <h7> {% trans "Do you want to enable Comments/Discussion on this Activity for Students ? " %} </h7>
         </div>
 
         <div class="row yes_no_disc_div">
           <div class="large-2 medium-4 columns"><h5>{% trans "Interaction : " %}</h5>
           </div>
           <div class="large-6 medium-8 columns">
-            <input type="radio" name="thread_create" value="Yes">Yes &nbsp;&nbsp;
-            <input type="radio" name="thread_create" value="No" checked="checked">No
+            <input type="radio" name="thread_create" value="Yes"/>Yes &nbsp;&nbsp;
+            <input type="radio" name="thread_create" value="No" checked="checked" />No
           </div>
         </div>
-        <div class="thread-settings-div {% if not node.discussion_enable %} hide {% endif %}">
-            {% get_thread_node node.pk as thread_node %}
-            {% if thread_node %}
-                {% get_attribute_value thread_node.pk 'release_response' as resp_val %}
-                {% get_attribute_value thread_node.pk 'thread_interaction_type' as thr_int_type %}
-                {% get_attribute_value thread_node.pk 'start_time' as thr_start_time %}
-                {% get_attribute_value thread_node.pk 'end_time' as thr_end_time %}
-            {% endif %}
+        <div class="thread-settings-div  hide">
             <div class="row">
+
               <div class="large-2 medium-4 columns "><h5>{% trans "Release Option:" %}</h5>
               </div>
               <div class="large-6 medium-8 columns">
                 <select id="release_resp_sel" name="release_resp_sel">
-                  <option value="True" {% if resp_val or not grel_dict %} selected{% endif %}>Show Replies to All</option>
-                  <option value="False" {% if grel_dict and not resp_val %} selected{% endif %}>Hide Replies from All</option>
+                  <option value="True" {% if resp_val  %} selected{% endif %}>Show Replies to All</option>
+                  <option value="False" {% if not resp_val %} selected{% endif %}>Hide Replies from All</option>
                 </select>
               </div>
             </div>
@@ -54,8 +54,8 @@
 
         </div>
     </div>      
-    <button type="submit" class="right blue-white-button save-metadata">Save Changes</button>
-    <button type="button" class="right blue-white-button cancel-metadata">Cancel</button>
+    <button type="submit" class="right blue-white-button">Save Changes</button>
+    <button type="button" class="right blue-white-button cancel-interaction_settings">Cancel</button>
   </form>
 
     <script type="text/javascript">
@@ -69,21 +69,24 @@
             }
         })
 
-
         $("select#release_resp_sel").change(function() {
-            $("select#interaction_type_sel").removeAttr("disabled");
+          $("select#interaction_type_sel").removeAttr("disabled");
         })
 
         $(document).ready(function(){
-			{% if node %}							
-				$("input[name='thread_create'][value='Yes']").attr("checked","checked");
-				$("input[name='thread_create']").trigger("change");
-				// $("input[name='thread_create']").attr("disabled",true);
-			{% else %}
-				$("input[name='thread_create'][value='No']").attr("checked","checked");
-			{% endif %}
-	});
-        $( ".cancel-metadata" ).click(function(event) {
-    $('#addAsset').foundation('reveal', 'close');     
-  });
+					{% if player_discussion_enable_attr %} 
+						$("input[name='thread_create'][value='Yes']").attr("checked","checked");
+						$("input[name='thread_create'][value='No']").removeAttr("checked");
+            $(".thread-settings-div").removeClass("hide");
+
+					{% endif %}
+
+        });
+        
+        $( ".cancel-interaction_settings" ).click(function(event) {
+					$('#addAsset').foundation('reveal', 'close');     
+        });
+
+
+
     </script>
