--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/group_pages.html
@@ -13,8 +13,8 @@
                 {% endif %}
             </div>
             <div class="asset_text">
-                <div class="asset_title" title="{{each.name}}">{{each.name|truncatechars:35}}</div>
-                <div class="asset_desc">{{each.content|safe|truncatechars:35}}</div>
+                <div class="asset_title" title="{{each.name}}">{{each.name|truncatechars:25}}</div>
+                <!-- <div class="asset_desc">{{each.content|safe|truncatechars:25}}</div> -->
             </div>
         </div>
     </div>
