--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -2087,7 +2087,7 @@ ul.jqtree-tree .jqtree-toggler:hover {
   box-shadow: 0px 2px 3px #000;
   margin: 10px auto;
   padding: 10px;
-  height: calc(120vh - 100px);
+  height: calc(150vh - 100px);
 }
 
 /* line 2239, ../../../scss/_clix2017.scss */
@@ -2756,4 +2756,57 @@ ul.jqtree-tree .jqtree-toggler:hover {
   color: #ce7869;
   border: 1px solid;
   border-radius: 6px;
+}
+
+/* Create_Unit styles */
+/* line 2926, ../../../scss/_clix2017.scss */
+.tags-container {
+  width: 100%;
+  height: 50px;
+  background: #fff;
+  padding: 5px 15px;
+  box-shadow: 1px 0px 0px #000;
+  margin-bottom: 65px;
+}
+/* line 2934, ../../../scss/_clix2017.scss */
+.tags-container .add-tag-heading
+span {
+  width: 40%;
+  color: #99aaba;
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-top: 15px;
+  margin-left: 8px;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", "sans-serif";
+}
+/* line 2946, ../../../scss/_clix2017.scss */
+.tags-container .tag-input-ele {
+  margin-left: 193px;
+  width: 54%;
+}
+/* line 2951, ../../../scss/_clix2017.scss */
+.tags-container .added-tags-div {
+  margin-left: 293px !important;
+  width: 54%;
+}
+/* line 2956, ../../../scss/_clix2017.scss */
+.tags-container #add-tag-btn {
+  color: #ce7869;
+  padding: 7px 14px;
+  background: #fff;
+  border: 1px solid #ce7869;
+  font-size: 12px;
+  font-family: "Rubik-Medium", serif;
+  border-radius: 5px !important;
+  margin-right: 20px;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  cursor: pointer;
+  display: inline-block;
+}
+/* line 2969, ../../../scss/_clix2017.scss */
+.tags-container #add-tag-btn:hover {
+  background-color: rgba(206, 120, 105, 0.2);
+  color: #ce7869;
 }
