--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -28,7 +28,7 @@
                     <div class="group_title left">{% firstof group_object.altnames group_object.name  %}</div>
                     <div class="right course_actions">
 
-                        <span data-dropdown="course-settings-drop" aria-controls="course-settings-drop" aria-expanded="false" class="tiny radius right">
+                        <span data-dropdown="course-settings-drop" aria-controls="course-settings-drop" aria-expanded="false" class="tiny radius right" data-options="align:left">
                             <i class="icon-widget fi-widget"></i>
                         </span>
                         <ul id="course-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
