--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_tags.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_tags.html
@@ -24,24 +24,24 @@
 </style>
 
 	<div class="row">
-		<div class="small-8 columns">
+		<div class="small-12 columns">
 			<span>
 
 				<div class="row">
 					<h3 >
-					<span  class="subheader small-3 columns"  data-tooltip class="has-tip" title="{% trans 'Tags help identify similiar work easily. Just add tag text and click Add Tag button' %}"> {% trans "Add Tag" %}:
+					<span  class="subheader small-2 columns"  data-tooltip class="has-tip" title="{% trans 'Tags help identify similiar work easily. Just add tag text and click Add Tag button' %}" style="margin-top: 3px; margin-left: 21px;"> {% trans "Add Tag" %}:
 					</span>
 
 					</h3>
 					<div class="small-9 columns">
-					<div class="row collapse">
+						<div class="row collapse">
 
-					<div class="small-10 columns">
-				    	<input id="tags_id" tabindex="2" type="text" value="" placeholder="{% trans 'Add tag text and click on [Add Tag] button' %}">
+					<div class="small-9 columns">
+				    	<input id="tags_id" tabindex="2" type="text" value="" placeholder="{% trans 'Add tag text and click on [Add Tag] button' %}" style="height:30px;margin-top: -3px;">
 				    	<input type="hidden" value="{{node.tags|join:', '|default_if_none:""}}" name="tags">
 			        </div>
-			        <div class="small-2 columns">
-			          <span tabindex="3" id="add-tag-btn" class="tiny button radius">{% trans 'Add Tag' %}</span>
+			        <div class="small-3 columns">
+			          <span tabindex="3" id="add-tag-btn" class="orange-button">{% trans 'Add Tag' %}</span>
 			        </div>
 					</div>
 
