--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -12,7 +12,7 @@
                 <div class="gray-text">{{source_obj.name}}</div>
                 </div>
                 <div class="right">
-                    <input name="name" type="text" placeholder="Enter Name"
+                    <input name="name" type="text" class="orange-button" placeholder="Enter Name"
                     value="{{node_obj.name|safe}}"/>
                 </div>
             </div>
@@ -31,7 +31,7 @@
             </div>
             <hr/>
             <div class="row">
-                <input type="submit" class ="small-12 columns" id="" value="Save"/>
+                <input type="submit" class ="small-2 columns right orange-button" id="" value="Save"/>
             </div>
         </form>
     </div>
