Fetch is_gstaff in gevent_base.html;refernece js error fixed for add-assets.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/add_asset.html
@@ -416,7 +416,7 @@
 
             }
 
-            uploadButton.innerHTML = 'Upload';
+            // uploadButton.innerHTML = 'Upload';
 
             // updating metadata of files, if file is uploaded sucessfully
             // if(xhr.responseText != "UploadError")
