--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
@@ -113,6 +113,8 @@
                     {% comment %}
                         <button type="button" class ="right asset-unit-button" id="save_unit">Save</button>
                     {% endcomment %}
+                    <!-- <input type="button" class="asset-unit-button right" value="Cancel"/> -->
+                    <a href="{% if unit_node %} {% url 'groupchange' unit_node.pk %}{% else %} {% url 'explore_basecourses' %}{% endif %} " class="asset-unit-button right" value="Cancel"/>Cancel</a>
                     <input type="submit" class="asset-unit-button right" id="save_unit" value="Save"/>
                 </div>
             </form>
