delete activity hiding activity card and not reloading

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_pages.html
@@ -125,7 +125,10 @@
                           success: function(data) {
                             console.log(data)
                             if (data=="success"){
-                                location.reload()
+                                $.each(coll_arr, function(ind,activity_id){
+                                    $("a[data-page-id='"+activity_id+"']").addClass('hide')
+                                })
+                                // location.reload()
                             }
                             else{
                                 alert("Something went wrong. Please try again later.")
