tags not updating json fixe

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_page_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_page_create_edit.html
@@ -75,6 +75,16 @@
 
     $(document).on('submit','#course_page_form',function(event){
         node_name_val = $(".node_name").val()
+        updateAllTags();
+        var tagsStr = tags.value.trim();
+        if(checkTag())
+        {
+            $("input:hidden[name='tags']").val($("input:hidden[name='tags']").val() + ', ' + tagsStr);
+        }
+        else if(tagsStr)
+        {
+            event.preventDefault();
+        }
         if(!node_name_val){
             event.preventDefault()
             $('.node_name_empty').removeClass('hide')
