--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translation_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translation_list.html
@@ -3,21 +3,30 @@
 {% block title %} {{title}} {% endblock %}
 
 {% block body_content %}
+<div class="row group_content">
+    <div class="small-12 columns group_sections_content">
 
-    <h2 class="text-center"> {{node.name}} </h2>
+        <h2> {{node.name}} </h2>
 
-    {% include 'ndf/node_ajax_content.html' %}
-    <hr/>
-    Translations |
-    <button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="button dropdown" tiny>Add / Edit</button><br>
-    <ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true">
-    {% for each_lang in supported_languages %}
-        <li><a href="{% url 'translate' group_id source_node_id each_lang %}">{{each_lang}}</a></li>
-    {% endfor %}
-    </ul>
-    <br/>
-    {% for each_node in nodes %}
-        {% include "ndf/widget_card.html" with node=each_node url_name=card_url_name url_first_arg=group_id url_second_arg=source_node_id url_third_arg=each_node.language.0 %}
-    {% endfor %}
-{% endblock %}
+        {% include 'ndf/node_ajax_content.html' %}
+        <hr/>
+        <label>
+        Translations:
+            <div>
+                <button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="orange-button" tiny>Add / Edit &nbsp;<i class="fa fa-chevron-down"></i></button><br/>
+            
+                <ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true">
+            {% for each_lang in supported_languages %}
+                    <li><a href="{% url 'translate' group_id source_node_id each_lang %}">{{each_lang}}</a></li>
+            {% endfor %}
+                </ul>
+            </div>
+        </label>
+        <br/>
+        {% for each_node in nodes %}
+            {% include "ndf/widget_card.html" with node=each_node url_name=card_url_name url_first_arg=group_id url_second_arg=source_node_id url_third_arg=each_node.language.0 %}
+        {% endfor %}
+    {% endblock %}
+    </div>
+</div>
 
